<resources>
    <string name="app_name">Kuis1</string>
    <string name="Berita">Hot News</string>
    <string name="Hotline">Launching Film Terbaru DARAH BIRU AREMA \n9/10/2018</string>
    <string name="berita1">Film Indonesia Go Internasional\n Salah Satu Film Indonesia Go Internasional, Penasaran Gimana Certanya.\n Lanjutkan Untuk Baca Sinopsisnya. (09/10/2018)</string>
    <string name="berita2">Dari Indie Untuk Bangsa\nMulai Maraknya Film Indie Yang Disutradarai Oleh Para Pemuda\n(09/10/2018)</string>
    <string name="next1">Selengkapnya >>></string>
    <string name="next2">Selengkapnya >>></string>
    <string name="JudulBeritaa">Film Indonesia Go Internasional</string>
    <string name="IsiBeritaa">Sinipsis :\nPada Januari 2016, publik Jakarta dikagetkan oleh serangan bom yang berada di jalan MH Thamrin. Setelah terjadi ledakan tersebut polisi yang juga merupakan anggota unit antiterorisme bernama Ardi (diperankan oleh Ario Bayu) berusaha memburu pelaku pengeboman.\nNamun saat bersamaan, polisi lalu lintas bernama Firman (diperankan oleh Ade Firman Hakim) berusaha sekuat tenaga mengondisikan dan mengamankan situasi disekitar daerah ledakan. Ledakan tersebut mengenai office boy Anas (diperankan oleh Ence Bagus) yang secara tidak sengaja ada di lokasi untuk membelikan pesanan rekan kantornya.\n\n</string>
    <string name="JudulBeritab">Maraknya Film Indie</string>
    <string name="Isiberitab">Sinopsis :\nFilm Satu Jiwa untuk Indonesia: Darah Biru Arema 2 2018 bercerita mengenai kelanjutan dari seri pertamanya, yakni tentang seorang suporter Arema yang bernama Pacho (diperankan oleh Mohammad Aminudin). Dia adalah seorang yang begitu semangat dalam mendukung tim Arema. Kecintaan terhadap tim sepak bola Arema temurun dari sang ayah, seorang fans fanatik dari Arema. Hal ini juga semakin diperkuat, oleh pengetahuannya yang luar biasa tentang sepakbola, terutama untuk klub Arema. Seperti layaknya seorang supporter fanatik, dimanapun dan kemanapun Pancho berada pasti selalu saja dia membawa atribut tim kebanggaannya yakni arema, serta selalu membicarakan tentang sepakbola.</string>
</resources>
