<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="21dp"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="8dp"
        android:text="@string/Berita"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="187dp"
        android:layout_height="96dp"
        android:layout_marginEnd="74dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/berita4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="99dp"
        android:layout_marginStart="99dp"
        android:text="@string/JudulBeritab"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="133dp"
        android:layout_height="102dp"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/berita1" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="180dp"
        android:layout_height="101dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="160dp"
        android:text="@string/berita1"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="303dp"
        android:layout_height="36dp"
        android:layout_marginEnd="110dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="268dp"
        android:onClick="berita1"
        android:text="@string/next1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="132dp"
        android:layout_height="122dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="312dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/berita4" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="182dp"
        android:layout_height="121dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="312dp"
        android:text="@string/berita2"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="304dp"
        android:layout_height="36dp"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="444dp"
        android:onClick="berita2"
        android:text="@string/next2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>